# weather_gui_rust

./: Cargo.toml  README.md
src/: app.rs  config.rs  data.rs  get_data.rs  main.rs
