[package]
name = "weather_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"

reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }

anyhow = "1"


[profile.dev]
opt-level = 1
overflow-checks = false